--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -107,6 +107,58 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-06">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-6-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1be7898f0d880e324373dcd218a1d0f4.webp" alt="「3月6日」最高速度20.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-6-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月6日」最高速度20.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、美国、欧洲、香港等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-05">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-5-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/291f39868df7237a0f3ec70e78e9a24b.webp" alt="「3月5日」最高速度20.9M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-5-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月5日」最高速度20.9M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了新加坡、美国、香港、加拿大、欧洲、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-04">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-4-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/610552e86a81521a4f6a2a8194cb9de6.webp" alt="「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-4-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、欧洲、加拿大、新加坡、香港、美国、日本等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-03">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-3-free-v2ray.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/050eeaeae15c4f80c45d1b2f1bf69e02.webp" alt="「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-3-free-v2ray.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、新加坡、日本、香港、美国、加拿大、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-03-02">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-3-2-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
@@ -130,16 +182,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-4-2-node-share-links.htm" title="「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="「3月25日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「3月25日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" title="「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-95773.htm" title="猫三联要隔多久打一针（猫三联要隔多久打一针才有效）">猫三联要隔多久打一针（猫三联要隔多久打一针才有效）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-20-free-node-subscribe.htm" title="「4月20日」最高速度18.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「4月20日」最高速度18.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-100205.htm" title="【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具">【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具</a></li>
-                        <li class="py-2"><a href="/news/article-81213.htm" title="狗猫批发市场（猫狗市场的猫怎么样）">狗猫批发市场（猫狗市场的猫怎么样）</a></li>
-                        <li class="py-2"><a href="/news/article-79101.htm" title="宠物猫疫苗接种时间（宠物猫疫苗有效期多久）">宠物猫疫苗接种时间（宠物猫疫苗有效期多久）</a></li>
-                        <li class="py-2"><a href="/news/article-90512.htm" title="领养狗狗什么意思（领养狗狗什么意思要钱吗）">领养狗狗什么意思（领养狗狗什么意思要钱吗）</a></li>
-                        <li class="py-2"><a href="/news/article-100862.htm" title="宠物美容师价格（宠物美容师宠物美容）">宠物美容师价格（宠物美容师宠物美容）</a></li>
+                        <li class="py-2"><a href="/news/article-86159.htm" title="DecimalFormat保留小数位">DecimalFormat保留小数位</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-20-clash-v2ray-ss-ssr.htm" title="「3月20日」最高速度21.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月20日」最高速度21.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-79806.htm" title="宠物医院服务项目价格表（宠物医院服务项目价格表最新）">宠物医院服务项目价格表（宠物医院服务项目价格表最新）</a></li>
+                        <li class="py-2"><a href="/news/article-95024.htm" title="宠物领养免费平台有哪些软件（宠物领养免费平台有哪些软件好）">宠物领养免费平台有哪些软件（宠物领养免费平台有哪些软件好）</a></li>
+                        <li class="py-2"><a href="/news/article-76391.htm" title="动物疫苗种类及类型分类图解（动物疫苗的种类）">动物疫苗种类及类型分类图解（动物疫苗的种类）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-2-clash-v2ray-ss-ssr.htm" title="「3月2日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「3月2日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-88310.htm" title="【Java分享客栈】一文搞定京东零售开源的AsyncTool，彻底解决异步编排问题">【Java分享客栈】一文搞定京东零售开源的AsyncTool，彻底解决异步编排问题</a></li>
+                        <li class="py-2"><a href="/news/article-87572.htm" title="动物注射疫苗注射哪里最好（动物疫苗注射注意事项）">动物注射疫苗注射哪里最好（动物疫苗注射注意事项）</a></li>
+                        <li class="py-2"><a href="/news/article-79102.htm" title="深圳市宠物领养之家官网电话 深圳市宠物领养之家官网电话号码">深圳市宠物领养之家官网电话 深圳市宠物领养之家官网电话号码</a></li>
+                        <li class="py-2"><a href="/news/article-88311.htm" title="动物疫苗注射工作注意事项有哪些（动物疫苗注射工作注意事项有哪些要求）">动物疫苗注射工作注意事项有哪些（动物疫苗注射工作注意事项有哪些要求）</a></li>
                     </ul>
     </div>
 </div>
@@ -151,7 +203,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">65</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">77</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
